# blsdk

./: CMakeLists.txt  FreeRTOSConfig.h  export.sh  flash_prog_cfg.ini  main.c
cmake/: kconfig.cmake  project.cmake
cmake/build_common/: build_types.cmake  compiler.cmake  linker.cmake  warnings.cmake
cmake/cpu/: c906_d0.cmake  e902_lp.cmake  e907_m0.cmake
cmake/sdk/: CMakeLists.txt
cmake/toolchain/: riscv64-unknown-elf.cmake
components/bl_os_adapter/: bl_os_hal.c
components/freertos/: CMakeLists.txt
components/freertos/include/: FreeRTOSConfig.h
components/platform/: CMakeLists.txt
components/platform/soc/bl808/bl808_e907_std/bl808_bsp_driver/startup/m0/source/GCC/: start_load.c
components/platform/soc/bl808/bl808_e907_std/bl808_bsp_driver/std_drv/src/: bl808_mfg_flash.c
components/yloop/src/: yloop.c
generic/: CMakeLists.txt
